# otusidempotence

./: README.md  orders.postman_collection.json  skaffold.yaml
deployments/helm/trymarqet/: Chart.yaml  values.yaml
deployments/helm/trymarqet/charts/auth/: values.yaml
deployments/helm/trymarqet/charts/billing/: values.yaml
deployments/helm/trymarqet/charts/notifications/: values.yaml
deployments/helm/trymarqet/charts/orders/: values.yaml
deployments/helm/trymarqet/charts/users/: values.yaml
deployments/helm/trymarqet/templates/: _helpers.tpl  configmap.yaml  istio-authn.yaml  istio-authz-billing.yaml  istio-authz-orders.yaml  istio-authz-users.yaml  istio-gateway.yaml  istio-virtualservice.yaml  secrets.yaml
deployments/k8s/: namespaces.yaml
doc/: distributed-transactions.mmd  idempotency.mmd
examples/helm/users/: values.dev.yaml
py/lib/flask-idempotency/: .isort.cfg  pyproject.toml
py/lib/flask-idempotency/flask_idempotency/: __init__.py  idempotency.py
py/services/auth/auth/: application.py
py/services/auth/auth/spec/: openapi.yaml
py/services/billing/billing/models/: account.py  balance_transaction.py
py/services/billing/billing/spec/: openapi.yaml
py/services/notifications/notifications/: routes.py
py/services/orders/: pyproject.toml  pytest.ini
py/services/orders/orders/: application.py  extensions.py  settings.py
py/services/orders/orders/api/: utils.py
py/services/orders/orders/models/: order.py
py/services/orders/orders/sagas/: order.py
py/services/orders/orders/spec/: openapi.yaml
(+14 files in other folders)
